// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Card > should handle click 1`] = `
<DocumentFragment>
  <div>
    <button
      class="border-theme-primary-100 bg-theme-background transition-colors-shadow focus-visible:border-theme-primary-400 dark:border-theme-secondary-800 relative h-full w-full cursor-pointer rounded-lg border-2 p-5 text-left outline-hidden duration-200 focus-visible:outline-hidden"
      data-testid="Card"
      type="button"
    >
      Test
      <div
        class="flex absolute -top-1 -right-1 items-center m-4 space-x-1"
      />
    </button>
  </div>
</DocumentFragment>
`;

exports[`Card > should render 1`] = `
<DocumentFragment>
  <div>
    <button
      class="border-theme-primary-100 bg-theme-background transition-colors-shadow focus-visible:border-theme-primary-400 dark:border-theme-secondary-800 relative h-full w-full cursor-pointer rounded-lg border-2 p-5 text-left outline-hidden duration-200 focus-visible:outline-hidden"
      data-testid="Card"
      tabindex="-1"
      type="button"
    >
      <div
        class="flex absolute -top-1 -right-1 items-center m-4 space-x-1"
      />
    </button>
  </div>
</DocumentFragment>
`;

exports[`Card > should render with custom options 1`] = `
<DocumentFragment>
  <div>
    <button
      class="border-theme-primary-100 bg-theme-background transition-colors-shadow focus-visible:border-theme-primary-400 dark:border-theme-secondary-800 relative h-full w-full cursor-pointer rounded-lg border-2 p-5 text-left outline-hidden duration-200 focus-visible:outline-hidden"
      data-testid="Card"
      type="button"
    >
      Test
      <div
        class="flex absolute -top-1 -right-1 items-center m-4 space-x-1"
      >
        <div
          aria-controls=":r0:"
          aria-expanded="true"
          aria-haspopup="dialog"
          data-testid="dropdown__toggle"
        >
          <div
            class="flex overflow-hidden justify-center w-4"
          >
            <div
              class="p-1 transition-colors duration-200 cursor-pointer text-theme-primary-300 dark:text-theme-secondary-600 dark:hover:text-theme-secondary-200 hover:text-theme-primary-400"
            >
              <div
                style="height: 16px; width: 16px;"
              >
                <svg
                  id="ellipsis-vertical"
                  style="height: 100%; width: 100%;"
                  viewBox="0 0 20 20"
                  x="0"
                  xml:space="preserve"
                  xmlns="http://www.w3.org/2000/svg"
                  y="0"
                >
                  <g
                    fill="none"
                    stroke="currentColor"
                    stroke-linecap="round"
                    stroke-linejoin="round"
                    stroke-width="2"
                  >
                    <circle
                      cx="10"
                      cy="16.994"
                      r="2.006"
                    />
                    <circle
                      cx="10"
                      cy="3"
                      r="2"
                    />
                    <circle
                      cx="10"
                      cy="10"
                      r="2"
                    />
                  </g>
                </svg>
              </div>
            </div>
          </div>
        </div>
      </div>
    </button>
  </div>
</DocumentFragment>
`;
